--- a/project/index.html
+++ b/project/index.html
@@ -6,8 +6,108 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="./static/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div class="container">
+    <div class="s1">
+      <nav class="navigation">
+        <img src="./media/Logo.png" alt="Logo" class="logo">
+
+        <ul class="nav-links">
+          <a href="#"><li class="nav-link">Home</li></a>
+          <a href="#"><li class="nav-link">Contact</li></a>
+          <a href="#"><li class="nav-link nav-number">0000 000 000</li></a>
+        </ul>
+      </nav>
+
+      <img src="./media/hero.png" alt="Hero" class="hero">
+      <div class="safe-gas-container">
+        <img src="./media/gs-mini.png" alt="Gas safe" class="safe-gas">
+      </div>
+
+      <h1 class="hero-title">24 hrs - 7 days a week
+        emergency gas and plumbing service</h1>
+
+      <a href="#"><button class="btn hero-btn">Call Us</button></a>
+    </div>
+
+    <div class="s2">
+      <div class="s2-cont">
+        <h2 class="s2-title">Gas Services 
+          Bradford</h2>
+
+        <p class="s2-text">We have been providing gas and plumbing services across Bradford and West Yorkshire region for over 15 years.  We cover commercial and domestic properties. </p>
+      </div>
+    </div>
+
+    <div class="s3">
+      <h3 class="s3-title">What We Offer</h3>
+      <hr class="s3-line">
+
+      <div class="s3-top-service">
+        <div class="service">
+          <img src="./media/repair.svg" alt="Repair" class="service-img">
+          <p class="service-title">Boiler Repair</p>
+        </div>
+
+        <div class="service">
+          <img src="./media/boiler.svg" alt="Boiler" class="service-img">
+          <p class="service-title">Boiler Installation</p>
+        </div>
+
+        <div class="service">
+          <img src="./media/tap.svg" alt="Tap" class="service-img">
+          <p class="service-title">Plumbing</p>
+        </div>
+
+        <div class="service">
+          <img src="./media/burn.svg" alt="Burn" class="service-img">
+          <p class="service-title">Gas</p>
+        </div>
+
+        <div class="service">
+          <img src="./media/controls.svg" alt="Controls" class="service-img">
+          <p class="service-title">Smart Controls</p>
+        </div>
+
+        <div class="service">
+          <img src="./media/hot.svg" alt="hot" class="service-img">
+          <p class="service-title">Floor Heating</p>
+        </div>
+      </div>
+
+      <div class="s3-bottom-service">
+        <div class="btm-service">
+          <img src="./media/burn.svg" alt="Burn" class="service-img">
+          <p class="service-title">Gas</p>
+
+          <p class="service-text">Gas or heating problems effect your daily life or can be extremley dangerous. Call us for the best solutions.</p>
+        </div>
+
+        <div class="btm-service">
+          <img src="./media/tap.svg" alt="Tap" class="service-img">
+          <p class="service-title">Plumbing</p>
+
+          <p class="service-text">Water repairs can be expensive if not dealt with. Call us for a quick and easy fix.</p>
+        </div>
+
+        <div class="btm-service">
+          <img src="./media/controls.svg" alt="Controls" class="service-img">
+          <p class="service-title">Smart Controls</p>
+
+          <p class="service-text">Installing smart controls in your home is an effective way of monitoring and saving your money.</p>
+        </div>
+      </div>
+
+      <button class="btn s3-btn">Call Us</button>
+    </div>
+
+    <div class="s4">
+      
+    </div>
+  </div>
 </body>
 </html>
